# CHMapper

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  ControllerException.cpp  ControllerException.hpp  DeviceScanner.cpp  DeviceScanner.hpp  Loop.cpp  MIDI.cpp  MIDI.hpp  Serial.hpp  Utils.cpp  Utils.hpp  VJoy.cpp  VJoy.hpp  VKeyboard.cpp  Wiimote.cpp  Wiimote.h  buttons_ref.h  guitar.lua  input_events.h  main.cpp  readme.md  test.lua  wiimote.lua
arduino/GuitarLights/: GuitarLights.ino
arduino/MidiPassthrough/: MidiPassthrough.ino
input/: Controller.cpp  Controller.hpp  Input.cpp  Input.hpp  InputFactory.cpp  InputFactory.hpp  MIDI.cpp  MIDI.hpp  MIDIDirect.cpp  MIDIDirect.hpp  MIDISerial.cpp  MIDISerial.hpp  SER_MIDI.cpp  SER_MIDI.hpp  Serial.cpp  Serial.hpp  SerialIn.cpp  SerialIn.hpp  Wiimote.cpp  Wiimote.hpp
output/: OutputFactory.cpp  OutputFactory.hpp  SerialOut.cpp  SerialOut.h  VJoy.cpp  VKeyboard.cpp  VKeyboard.hpp  VMIDI.cpp  VMIDI.hpp
src/: Device.cpp  Device.hpp  DeviceException.cpp  DeviceException.h  DeviceException.hpp  DeviceScanner.cpp  DeviceScanner.hpp  Loop.cpp  Loop.hpp  Serial.cpp  Serial.hpp  main.cpp  scanner.cpp  scanner.h
src/input/: Controller.cpp  Controller.hpp  CoreMIDIIn.cpp  CoreMIDIIn.hpp  Input.cpp  Input.h  Input.hpp  MIDI.cpp  MIDI.hpp  MIDIDirect.cpp  MIDIIn.cpp  MIDIIn.hpp  MIDISerial.cpp  MIDISerial.hpp  MIDISerialIn.cpp  MIDISerialIn.hpp  PS3.cpp  PS3.h  PS3GHGuitar.h  PS3RBGuitar.h  Raphnet.cpp  Raphnet.h  SerialIn.cpp  SerialIn.hpp  WiiController.cpp  WiiController.h  Wiimote.cpp
src/output/: Output.cpp  Output.hpp  OutputFactory.hpp  SerialOut.cpp  SerialOut.h  VJoy.cpp  VJoy.hpp  VKeyboard.cpp  VKeyboard.hpp  VMIDI.cpp  VMIDI.hpp  buttons_ref.h
